@@ -2,7 +2,6 @@ package shop.nuribooks.books.book.booktag.service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -101,13 +100,14 @@ public class BookTagServiceImpl implements BookTagService {
 	@Override
 	public List<BookResponse> getBooksByTagId(Long tagId) {
 
+
 		List<Long> bookIds = bookTagRepository.findBookIdsByTagId(tagId);
 
 		List<Book> books = bookRepository.findAllById(bookIds);
 
 		return books.stream()
 			.map(bookMapper::toBookResponse)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
